# aurora-alert

./: .gitignore  Cargo.toml  README.md  aurora-alert.service
.cargo/: config.toml
backend/: .env.template  .gitignore  Cargo.toml  README.md
backend/migrations/: 20220322165038_init.sql
backend/src/: config.rs  db.rs  email.rs  error.rs  errors.rs  helpers.rs  lib.rs  mail.rs  main.rs  routes.rs  tasks.rs  templates.rs  types.rs
backend/src/apis/: aurora_watch.rs  mod.rs  open_weather.rs
backend/src/routes/: core.rs  mod.rs  users.rs
backend/src/templates/: alert.html  already_registered.html  base.html  mod.rs  verify.html
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  LICENSE-MIT  README.md  Trunk.toml  index.html  index.scss
frontend/assets/css/: bootstrap-grid.css  bootstrap-reboot.css  bootstrap-utilities.css  bootstrap.css
frontend/src/: app.rs  components.rs  error.rs  hooks.rs  lib.rs  main.rs  pages.rs  routes.rs  services.rs  theme.rs  themes.rs  types.rs
frontend/src/components/: chart.rs  forms.rs  header.rs  main_content.rs  mod.rs
frontend/src/components/chart/: controls.rs  plot.rs
frontend/src/components/forms/: form.rs  registration.rs
frontend/src/pages/: about.rs  home.rs  internal_server_error.rs  page_not_found.rs  register.rs  unsubscribe.rs  verify.rs
frontend/src/services/: charts.rs  locations.rs  mod.rs  requests.rs  subscribe.rs  user.rs
frontend/src/types/: locations.rs  user.rs
frontend/tests/: integration.rs
scripts/: deploy.sh  dev.sh  prod.sh
server/: .env_template  Cargo.toml  README.md
server/configuration/: base_template.toml  dev_template.toml  production_template.toml
server/migrations/: 20220322165038_init.sql  20220909142645_seed_db.sql
server/src/: configuration.rs  db.rs  email.rs  error.rs  helpers.rs  lib.rs  main.rs  startup.rs  tasks.rs  telemetry.rs  types.rs
server/src/apis/: aurora_watch.rs  open_weather.rs
server/src/routes/: core.rs  mod.rs  users.rs
server/src/templates/: alert.html  base.html  mod.rs  verify.html
