[package]
name = "aurora-alert-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-cors = "0.6.1"
actix-web = "4"
anyhow = "1.0.56"
chrono = { version = "0.4.19", features = [ "serde" ] }
derive_more = { version = "0.99.17", default_features = false, features = [ "display", "error" ] }
dotenv = "0.15"
env_logger = "0.9.0"
lettre = { version = "0.10.0-rc.4", features = [ "tokio1-native-tls" ] }
log = "0.4.16"
once_cell = "1.10.0"
quick-xml = { version = "0.22", features = [ "serialize" ] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
sqlx = {version = "0.5", features = [ "runtime-actix-native-tls" , "sqlite", "chrono" ] }
tera = { version = "1.15.0", default-features = false }
thiserror =  "1.0"
