[package]
name = "aurora-alert-backend"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.56"
axum = "0.5"
chrono = { version = "0.4.19", features = [ "serde" ] }
derive_more = { version = "0.99.17", default_features = false, features = [ "display", "error" ] }
dotenv = "0.15"
lettre = { version = "0.10.0-rc.4", features = [ "tokio1-native-tls" ] }
once_cell = "1.10.0"
quick-xml = { version = "0.22", features = [ "serialize" ] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_repr = "0.1"
sqlx = {version = "0.5", features = [ "runtime-tokio-native-tls" , "sqlite", "chrono" ] }
tera = { version = "1.15.0", default-features = false }
thiserror =  "1.0"
tokio = { version = "1", features = ["macros", "rt", "time"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
