[package]
name = "aurora-alert-frontend"
version = "0.1.0"
edition = "2021"
description = "Front end web app for Aurora Alert"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
chrono = { version = "0.4.19", features = [ "serde", "wasmbind" ] }
log = "0.4"
ordered-float = { version = "2.0", features = [ "serde" ] }
plotly = { git = "https://github.com/mfreeborn/plotly", rev = "9f44a8bcbc4c6850730069eb227810ab7b5940f5", features = [ "wasm" ] }
plotters = { version = "0.3", default_features = false, features = [ "datetime", "line_series" ] }
plotters-backend = "0.3"
plotters-canvas = "0.3"
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_urlencoded = "0.7.1"
thiserror = "1.0"
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [ "HtmlCanvasElement", "TextMetrics", "HtmlDivElement" ] }
wee_alloc = "0.4"
yew = "0.19"
yew-hooks = "0.1.46"
yew-router = "0.16"
js-sys = "0.3"


