[package]
name = "aurora-alert-frontend"
version = "0.1.0"
edition = "2021"
description = "Front end web app for Aurora Alert"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
chrono = { version = "0.4", features = [ "serde" ] }
js-sys = "0.3"
log = "0.4"
ordered-float = { version = "2", features = [ "serde" ] }
plotly = { git = "https://github.com/mfreeborn/plotly", rev = "3d1a6bf1a41dda4b4874ad2ab08dcf28ee04f6c9", features = [ "wasm" ] }
reqwest = { version = "0.11", features = [ "json" ] }
serde = { version = "1", features = [ "derive" ] }
serde_urlencoded = "0.7"
thiserror = "1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = "0.3"
wee_alloc = "0.4"
yew = "0.19"
yew-hooks = "0.1"
yew-router = "0.16"
