[package]
name = "aurora-alert-frontend"
version = "0.1.0"
edition = "2021"
description = "Front end web app for Aurora Alert"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

[dependencies]
chrono = { version = "0.4", features = [ "serde", "wasmbind" ] }
common = { path = "../common" }
gloo-net = { version = "0.2.4", features = ["json", "http"] }
js-sys = "0.3"
log = "0.4"
plotly = { version = "0.8.1", features = [ "wasm" ] }
serde = { version = "1", features = [ "derive" ] }
serde_urlencoded = "0.7"
thiserror = "1"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
yew = "0.19"
yew-hooks = "0.1"
yew-router = "0.16"
ag-grid-rs = { path = "../../ag-grid-rs/ag-grid-rs" }


[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement"
]
